# mulby

./: .editorconfig  .gitignore  CLAUDE.md  CLIPBOARD_SOLUTION.md  CONTRIBUTING.md  HOST_API_UPDATE_SUMMARY.md  LICENSE  NATIVE_CLIPBOARD_SUCCESS.md  README.md  SECURITY.md  ai-mcp-service-plan.md  deliverable.md  eslint.config.mjs  icon.icns  image-compat-strategy-2026.md  index.html  notes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  task_plan.md  temp_session.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
docs/: AI_CREATE_DESIGN.md  Agent Skills 规范符合性评估报告.md  CLIPBOARD_SOLUTION.md  PLUGIN_DEVELOP_PROMPT.md  PRD.md  PROGRESS.md  QUICK_START.md  README.md  TASKS.md  ai-best-practices.md  ai-capability-policy-decoupling-migration-plan.md  ai-multi-provider-best-practice-plan.md  ai-planning-system.md  ai-skills-composer-phase1-completed.md  ai-skills-integration-plan.md  ai-skills-phase3-frontend-completed.md  ai-skills-phase4-completed.md  ai-walkthrough.md  ai.md  api-reference.md  api-status.md  architecture.md  attachment-manager-design.md  background-plugin-design.md  ci-progress.md  cli-publish-guide.md  code-review-2026-04-17-fix-summary.md  code-review-2026-04-17.md  code-review-architecture-2026-04-17.md  context-compression-optimization.md  deep-link-design.md  deep-link-landing.html  fix-log-viewer-system.md  inbrowser-api-design.md  local-search-improvements.md  macos-unsigned-resource-update-release-notes.md  manifest-v2.md  (+31 more)
native/win32-text-selection/: CMakeLists.txt  text_selection.cpp
(+1050 files in other folders)
